<resources>
    <string name="app_name">Ehasibu</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="welcome">Welcome ,</string>
    <string name="ehasibu_platform">EHASIBU PLATFORM</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="business_name">Business_name</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="other_names">other_names</string>
    <string name="i_agree_to_the_terms_of_servive_and_privacy_policy">I agree to the Terms of Servive and Privacy Policy</string>
    <string name="we_have_sent_an_otp_to_your_email_enter_here_to_continue">we have sent an Otp to your email enter here to continue</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="new_customers">New Customers</string>
    <string name="today_s_sales">Today\'s Sales</string>
    <string name="today_s_expenses">Today\'s Expenses</string>
    <string name="new_customers_">New Customers</string>
    <string name="add_sale">Add Sale</string>

    <string name="ehasibu">EHASIBU</string>
    <string name="dashboard">Dashboard</string>
    <string name="sales">Sales</string>
    <string name="purchases">Purchases</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="accounts">Accounts</string>
    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="roles">Roles</string>
    <string name="users">Users</string>
    <string name="returns">Returns</string>

    <string name="all_sales">All Sales</string>
    <string name="generate_invoice">Generate Invoice</string>
    <string name="back">Back</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string-array name="payment_modes">
        <item> Bank Transfer</item>
        <item> M-PESA</item>
        <item>Cash</item>
    </string-array>
    <string name="balance">Balance</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="summary_net_total">Summary Net Total</string>
    <string name="summary_tax">Summary Tax</string>
    <string name="product">Product</string>
    <string name="product_id">Product Id</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="unit">Unit</string>
    <string name="no">No.</string>
    <string name="customer_name">Customer Name</string>
    <string name="add_product">Add Product</string>
    <string name="summary_total">Summary Total</string>

    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_weak_password">Password must contain at least one uppercase letter, one lowercase letter, one number, one special character, and be at least 6 characters long</string>

    <string name="error_empty_business_name">Business name cannot be empty</string>
    <string name="error_empty_first_name">First name cannot be empty</string>
    <string name="error_empty_last_name">Last name cannot be empty</string>
    <string name="error_empty_other_name">Other name cannot be empty</string>
    <string name="error_short_password">Password must be at least 6 characters long</string>
    <string name="error_empty_confirm_password">Confirm password cannot be empty</string>
    <string name="error_password_mismatch">Passwords do not match</string>


    <string name="error_empty_otp">OTP cannot be empty</string>
    <string name="error_invalid_otp">OTP must be 6 digits</string>
    <string name="error_incorrect_otp">Incorrect OTP. Please try again.</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>


    <string name="start_date">Start Date</string>
    <string name="today_s_orders">Today\'s Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="orders">Orders</string>
    <string name="end_date">End Date</string>
    <string name="apply">Apply</string>
    <string name="all_orders">All Orders</string>
    <string name="add_purchase_order">Add Purchase Order</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string-array name="product_actions">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="remember_me">remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">email address</string>
    <string name="home">Home</string>

    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />

    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="product_sales">Product Sales</string>
    <string name="service_sales">Service Sales</string>
    <string name="quotation">Quotation</string>
    <string name="customer_information">Customer Information</string>
    <string name="purchase_orders">Purchase Orders</string>
    <string name="vendor">Vendor</string>
    <string name="purchase_bill">Purchase Bill</string>
    <string name="reports">Reports</string>

    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Due Date</string>
    <string name="payment">Payment</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="amount_received">Amount Received</string>

    <string name="check_your_email_we_have_sent_you_a_rest_link">Check Your email, we have sent you a rest link</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="check_your_email_we_have_sent_your_current_password">check your email, we have sent your current password</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_back">Welcome Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="update_budget">Update Budget</string>
    <string name="budget_type">Budget Type</string>
    <string name="amount_budgeted">Amount Budgeted</string>
    <string name="total_amount">Total Amount</string>
    <string name="approve_quote">Approve Quote</string>
    <string name="address">Address</string>
    <string name="company_name">Company Name</string>
    <string name="email_adress">Email Adress</string>
    <string name="quantity">Quantity</string>
    <string name="buying_price_kes">Buying Price (KES)</string>
    <string name="selling_price_kes">Selling Price (KES)</string>
    <string name="productname">ProductName</string>
    <string name="period">Period</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="service_name">Service Name</string>
    <string name="service">Service</string>
    <string name="save">Save</string>
    <string name="service_price">Service Price</string>
    <string name="Sales"> Sales</string>
    <string name="s_price_kes">S Price_kes</string>
    <string name="b_price_kes">B Price_kes</string>
    <string name="search_product">Search Product</string>
    <string name="add_budget">Add Budget</string>
    <string name="date">Date</string>
    <string name="budget_balance">Budget Balance</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="basket">basket</string>
    <string name="filter">Filter</string>
    <string name="add_purchase">Add_purchase</string>
    <string name="customers">Customers</string>
    <string name="vendors">Vendors</string>
    <string name="bills">Bills</string>
    <string name="icon">Icon</string>
    <string name="add_quote">Add Quote</string>
    <string name="add_customer">Add Customer</string>
    <string name="string_icon">string/icon</string>
    <string name="add_vendor">Add Vendor</string>
    <string name="quantity_purchased">Quantity Purchased</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense_type">Expense Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="display_name">Display Name</string>
    <string name="vendor_type">Vendor Type</string>
    <string name="other_details">Other Details</string>
    <string name="vendor_id">Vendor Id</string>
    <string name="vendor_pin">Vendor Pin</string>
    <string name="pdf">pdf</string>
    <string name="search_vendors">Search vendors</string>
    <string name="active_vendors">Active Vendors</string>
    <string name="all_vendors">All Vendors</string>
    <string name="new_vendor">New Vendor</string>
    <string name="currency">Currency</string>
    <string name="input_tax">Input Tax</string>
    <string name="billed_amount">Billed Amount</string>
    <string name="witholding_tax">Witholding Tax</string>
    <string name="payment_date">Payment Date</string>
    <string name="po_number">PO. Number</string>
    <string name="bill_id">Bill ID</string>
    <string name="overdue_bills">Overdue Bills</string>
    <string name="upcoming_bills">Upcoming Bills</string>
    <string name="search_bills">Search Bills</string>
    <string name="buying_price">Buying Price</string>
    <string name="expense_category">Expense Category</string>
    <string name="amount">Amount</string>
    <string name="set_price">Set Price</string>
    <string name="selling_price">Selling Price</string>
    <string-array name="sales_spinner_items">
        <item>Product Sales</item>
        <item>Service Sales</item>
        <item>Quotation</item>
        <item>Customer Information</item>
    </string-array>


</resources>