<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group
            android:checkableBehavior="single">



            <item android:id="@+id/dashboard_drawer_item"
                android:title="@string/dashboard"/>


            <item android:id="@+id/accunts_drawer_item"
                android:title="@string/accounts"/>


            <item android:id="@+id/budget_drawer_item"
                android:title="@string/budget"/>


            <item android:id="@+id/expenses_drawer_item"
                android:title="@string/expenses"/>

            <item android:id="@+id/products_drawer_item"
                android:title="@string/products"/>


            <item android:id="@+id/purchases_drawer_item"
                android:title="@string/purchases"/>

            <item android:id="@+id/returns_drawer_item"
                android:title="@string/returns"/>

            <item android:id="@+id/roles_drawer_item"
                android:title="@string/roles"/>

            <item android:id="@+id/sales_drawer_item"
                android:title="@string/sales"/>

            <item android:id="@+id/services_drawer_item"
                android:title="@string/services"/>

            <item android:id="@+id/users_drawer_item"
                android:title="@string/users"/>

            <item android:id="@+id/settings_drawer_item"
                android:title="Settings"/>




        </group>


</menu>