<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <AutoCompleteTextView
            android:id="@+id/customerNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_corner"
            android:inputType="none"
            android:padding="16dp"
            android:paddingEnd="12dp"
            android:text="@string/customer_name"
            android:textColor="#800000"
            android:textColorHint="#800000"
            android:textSize="16sp"

            tools:ignore="LabelFor,RtlSymmetry" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#800000">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_id"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unit"
                    android:textColor="@color/white"/>

            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="start"
            android:backgroundTint="#800000"
            android:text="@string/add_product"
            android:id="@+id/addproductbutton"
            />

        <EditText
            android:id="@+id/summaryTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:text="@string/summary_total"
            android:textColor="#800000"
            android:textSize="16sp"
            android:textColorHint="#800000"
            android:background="@drawable/rounded_corner"
            android:layout_margin="16dp"
            android:inputType="none"
            android:padding="16dp"
            android:paddingEnd="12dp"
            tools:ignore="LabelFor,RtlSymmetry" />
        <EditText
            android:id="@+id/summaryTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:inputType="none"
            android:text="@string/summary_tax"
            android:textColor="#800000"
            android:textSize="16sp"
            android:textColorHint="#800000"
            android:background="@drawable/rounded_corner"
            tools:ignore="Autofill,LabelFor" />
        <EditText
            android:id="@+id/summaryNetTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:inputType="none"
            android:text="@string/summary_net_total"
            android:textColor="#800000"
            android:textSize="16sp"
            android:textColorHint="#800000"
            android:background="@drawable/rounded_corner"
            tools:ignore="Autofill,LabelFor" />
        <EditText
            android:id="@+id/amountPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:inputType="none"
            android:text="@string/amount_paid"
            android:textColor="#800000"
            android:textSize="16sp"
            android:textColorHint="#800000"
            android:background="@drawable/rounded_corner"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/datepicker_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:inputType="none"
            android:text="@string/due_date"
            android:textColor="#800000"
            android:textSize="16sp"
            android:textColorHint="#800000"
            android:background="@drawable/rounded_corner"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="start"
                android:backgroundTint="#800000"
                android:text="@string/proceed_to_pay"
                android:id="@+id/paybutton"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="start"
                android:backgroundTint="#800000"
                android:text="@string/cancel"
                android:id="@+id/cancel_button"
                />


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
