<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productsales.view.PaymentFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/modeOfPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="none"
            android:padding="16dp"
            android:hint="@string/mode_of_payment"
            android:textColor="#800000"
            android:textColorHint="#800000"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/amountPayable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="none"
            android:padding="16dp"
            android:hint="@string/amount_payable"
            android:textColor="#800000"
            android:textColorHint="#800000"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/amountReceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="none"
            android:padding="16dp"
            android:hint="@string/amount_received"
            android:textColor="#800000"
            android:textColorHint="#800000"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/amountPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="none"
            android:padding="16dp"
            android:hint="@string/amount_paid"
            android:textColor="#800000"
            android:textColorHint="#800000"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="none"
            android:padding="16dp"
            android:hint="@string/balance"
            android:textColor="#800000"
            android:textColorHint="#800000"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitpaymentbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:backgroundTint="#800000"
                android:text="@string/submit" />

            <Button
                android:id="@+id/cancelpaymentbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:backgroundTint="#800000"
                android:text="@string/cancel" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>