<?xml version="1.0" encoding="utf-8"?>
<!-- <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".login.Login">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ehasibu_platform"
            android:textSize="28sp"
            android:textColor="#800000"
            android:fontFamily="sans-serif-black"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />
        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textColor="#800000"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/login_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_to_your_account"
            android:textSize="20sp"
            android:textColor="#800000"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:src="@drawable/email_24"
            android:hint="@string/email"
            android:textColor="#800000"
            android:textSize="16sp"
            android:textColorHint="#800000"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:layout_margin="16dp"
            android:id="@+id/email_input"
            />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:src="@drawable/lock_password"
            android:hint="@string/password"
            android:textColor="#800000"
            android:textSize="16sp"
            android:textColorHint="#800000"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:id="@+id/password_input"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:orientation="horizontal"
            android:layout_margin="16dp"

            tools:ignore="RtlSymmetry">

            <CheckBox
                android:id="@+id/remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>


            <TextView

                android:layout_width="114dp"
                android:layout_height="33dp"
                android:layout_gravity="start"
                android:fontFamily="sans-serif-light"
                android:text="@string/remember_me"
                android:paddingTop="10dp"
                android:textColor="#800000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/forgot_password"
                android:paddingTop="10dp"
                android:textColor="#800000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_margin="16dp"

            >

            <Button


                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:backgroundTint="#800000"
                android:padding="8dp"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:id="@+id/login_btn" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:backgroundTint="#800000"
                android:padding="8dp"
                android:textSize="16sp"
                android:layout_gravity="end"

                android:id="@+id/signup_btn"/>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>